2012-02-09  Andrey Belevantsev  <abel@ispras.ru>

	Backport from mainline 
	2012-01-20  Andrey Belevantsev  <abel@ispras.ru>

	PR target/51106
	* function.c (instantiate_virtual_regs_in_insn): Use
	delete_insn_and_edges when removing a wrong asm insn.

2012-02-07  Eric Botcazou  <ebotcazou@adacore.com>

	PR middle-end/51994
	* expr.c (get_inner_reference): If there is an offset, add a negative
	bit position to it (if any).

2012-02-07  Kai Tietz  <ktietz@redhat.com>
            Dave Korn  <dave.korn.cygwin@gmail.com>

        PR target/40068
        * config/i386/winnt-cxx.c (i386_pe_adjust_class_at_definition):
        Take care that typinfo gets dllexport-attribute.

2012-02-07  Alan Modra  <amodra@gmail.com>

	PR target/52107
	* config/rs6000/rs6000.c (rs6000_emit_move): Don't create DImode
	subregs of TFmode.

2012-02-02  Uros Bizjak  <ubizjak@gmail.com>

	Backport from mainline:
	2011-11-18  Uros Bizjak  <ubizjak@gmail.com>

	PR tree-optimization/51118
	* fold-const.c (fold_checksum_tree): Check for TS_TYPED structure
	before using TREE_TYPE accessor on expr.

2012-01-12  Georg-Johann Lay  <avr@gjlay.de>

	Backport from mainline r183796
	PR rtl-optimization/51374
	* combine.c (can_combine_p): Don't allow volatile_refs_p insns
	to cross other volatile_refs_p insns.

2012-01-31  Matthew Gretton-Dann  <matthew.gretton-dann@arm.com>

	Backport from mainline.
	2011-01-31  Matthew Gretton-Dann  <matthew.gretton-dann@arm.com>

	config/arm/thumb2.md (thumb2_mov_notscc): Use MVN for true
	condition.

2012-01-31  Andreas Krebbel  <Andreas.Krebbel@de.ibm.com>

	* config/s390/s390.md ("*ashr<mode>3_and"): Add missing z196 flag
	to srak instruction.

2012-01-30  Bin Cheng  <bin.cheng@arm.com>

	Backport from mainline.
	2012-01-30  Bin Cheng  <bin.cheng@arm.com>

	PR target/51835
	* config/arm/arm.c (arm_libcall_uses_aapcs_base): Use correct ABI
	for __aeabi_d2iz/__aeabi_d2uiz with hard-float.

2012-01-30  Ramana Radhakrishnan  <ramana.radhakrishnan@linaro.org>
